# bowflex-workout-plan

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  package-lock.json  puppeteer_render.js  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
dotnet/: .gitignore  Makefile  PdfExtractor.csproj  Program.cs  setup.sh
elixir/: Makefile  README.md  mix.exs  setup.sh
elixir/lib/: pdf_extractor.ex
elixir/test/: pdf_extractor_test.exs
golang/: .gitignore  Makefile  go.mod  main.go  setup.sh
java/: Makefile  pom.xml  setup.sh
julia/: .gitignore  Makefile  Project.toml  main.jl  setup.sh
kotlin/: Makefile  build.gradle.kts  setup.sh
node-ts/: Makefile  package-lock.json  package.json  tsconfig.json
node-ts/src/: cli.ts  config.ts  main.ts  markdown-converter.ts  path-utils.ts  pdf-extractor.ts  pdf-processor.ts  types.ts
nodejs/: .gitignore  Makefile  package-lock.json  package.json
nodejs/src/: cli.js  config.js  main.js  markdown-converter.js  path-utils.js  pdf-extractor.js  pdf-processor.js
pdf_extractor/: __main__.py
php/: .gitignore  .php-cs-fixer.php  Makefile  composer.json  setup.sh
php/src/: main.php
python/: .gitignore  Makefile  pyproject.toml  setup.sh
resources/: config.yaml  first_page.md  workouts.yaml
ruby/: .gitignore  .rubocop.yml  Gemfile  Makefile  main.rb  setup.sh
rust/: .gitignore  Cargo.toml  Makefile  setup.sh
rust/src/: main.rs
scala/: Makefile  build.sbt  setup.sh
workout_exporter/: __main__.py
(+19 files in other folders)
